metatag per immagine x

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Metatag per Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image"><!--immagine quadrata-->
+    <meta name="twitter:card" content="summary"><!--immagine rettangolare-->
+    
+    <meta name="twitter:site" content="@luciogiolli">
+    <meta name="twitter:creator" content="@luciogiolli">
+    <meta name="twitter:title" content="My Gallery App">
+    <meta name="twitter:description"
+        content="This is a simple gallery app built with Firebase and JavaScript.There are my AI-ART images.">
+    <meta name="twitter:image"
+        content="https://firebasestorage.googleapis.com/v0/b/wada-42dd4.appspot.com/o/images%2FUntitled%20image%20(2).png?alt=media&token=75f81462-24de-4c0f-b104-167101714cd0">
     <title>My gallery</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
